lab 1 - example/test_files/syntax_errors/Atest.java
public class IllegalIfInIfCondition {
    public static void main(String[] a) {
        System.out.println();
    }
}

public class IllegalIfInIfCondition {
    public static void main(String[] a) {
        System.out.println(new MyClass().Init());
    }
}